# cloudgame-windows-sdk

./: .gitignore  README.md  cloud_gaming_windows.sln
CloudPhonePaas/: README.md
CloudPhonePaas/CloudPhone_DuiLib_Demo/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  crash_runner.ps1  vcpkg.json
CloudPhonePaas/CloudPhone_DuiLib_Demo/cmake/: TcrSdkWindows.cmake
CloudPhonePaas/CloudPhone_DuiLib_Demo/skin/: login.xml  main.xml  streaming.xml  streaming_landscape.xml
CloudPhonePaas/CloudPhone_DuiLib_Demo/skin/dialogs/: app_list_dialog.xml  camera_play_dialog.xml  confirm_dialog.xml  gps_dialog.xml  keep_front_dialog.xml  mute_dialog.xml  package_dialog.xml  resolution_dialog.xml  result_dialog.xml  sensor_dialog.xml  start_app_dialog.xml  text_input_dialog.xml  two_field_dialog.xml
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/: main.cpp
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/core/: BatchTaskOperator.cpp  BatchTaskOperator.h  StreamConfig.cpp  StreamConfig.h
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/core/video/: Frame.h  VideoRenderer.cpp  VideoRenderer.h  VideoTransformHelper.cpp  VideoTransformHelper.h
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/services/: ApiService.cpp  ApiService.h  NetworkService.cpp  NetworkService.h
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/utils/: CrashDumpHandler.cpp  CrashDumpHandler.h  ImageCache.h  InstanceImageDownloader.cpp  InstanceImageDownloader.h  Logger.cpp  Logger.h  StringUtils.h  UiThreadHelper.h
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/viewmodels/: AndroidInstanceModel.cpp  AndroidInstanceModel.h  BatchTaskOperatorModel.cpp  BatchTaskOperatorModel.h  StreamingViewModel.cpp  StreamingViewModel.h
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/windows/: LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  StreamingWindow.cpp  StreamingWindow.h
CloudPhonePaas/CloudPhone_DuiLib_Demo/src/windows/dialogs/: BatchDialog.cpp  BatchDialog.h  ConfirmDialog.cpp  ConfirmDialog.h  InputDialogs.cpp  InputDialogs.h  ResultDialog.cpp  ResultDialog.h
CloudPhonePaas/CloudPhone_QtQuick_Demo/: CMakeLists.txt  Info.plist.in  README.md
CloudPhonePaas/CloudPhone_QtQuick_Demo/cmake/: TcrSdkLinux.cmake
CloudPhonePaas/CloudPhone_QtQuick_Demo/qml/: LoginWindow.qml  MainWindow.qml  StreamingWindow.qml
CloudPhonePaas/CloudPhone_QtQuick_Demo/qml/components/: Dialogs.qml
CloudPhonePaas/CloudPhone_QtQuick_Demo/src/: main.cpp
CloudPhonePaas/CloudPhone_QtQuick_Demo/src/core/: BatchTaskOperator.cpp  BatchTaskOperator.h  StreamConfig.cpp  StreamConfig.h
CloudPhonePaas/CloudPhone_QtQuick_Demo/src/core/video/: Frame.cpp  VideoRenderItem.cpp  VideoRenderItem.h  VideoRenderPaintedItem.cpp  VideoRenderPaintedItem.h  VideoTransformHelper.h  YuvDynamicTexture.cpp  YuvMaterial.cpp  YuvMaterial.h  YuvNode.cpp  YuvNode.h  YuvTestPattern.h
CloudPhonePaas/CloudPhone_QtQuick_Demo/src/services/: ApiService.cpp  ApiService.h  NetworkService.cpp  NetworkService.h
CloudPhonePaas/CloudPhone_QtQuick_Demo/src/utils/: CrashDumpHandler.cpp  CrashDumpHandler.h  EnvInfoPrinter.h  InstanceImageDownloader.cpp  InstanceImageDownloader.h  InstanceImageProvider.cpp  InstanceImageProvider.h  Logger.cpp  Logger.h  VariantListConverter.cpp  VariantListConverter.h
CloudPhonePaas/CloudPhone_QtQuick_Demo/src/viewmodels/: AndroidInstanceModel.cpp  AndroidInstanceModel.h  BatchTaskOperatorModel.cpp  BatchTaskOperatorModel.h  LoginViewModel.cpp  LoginViewModel.h  MultiStreamViewModel.cpp  MultiStreamViewModel.h  StreamingViewModel.cpp  StreamingViewModel.h
CloudStream/: README.md
CloudStream/CloudStream_ImGui_Demo/: .gitignore  CMakeLists.txt  config.json
CloudStream/CloudStream_ImGui_Demo/cmake/: TcrSdkMacOS.cmake
CloudStream/CloudStream_ImGui_Demo/src/: app.cpp  app.h  config.cpp  config.h  frame_queue.h  http_client.cpp  http_client.h  logger.h  main.cpp  video_renderer.cpp  video_renderer.h
CloudStream/CloudStream_QtQuick_Demo/: CMakeLists.txt  README.md  config.json
CloudStream/CloudStream_QtQuick_Demo/cmake/: TcrSdkLinux.cmake  TcrSdkMacOS.cmake  TcrSdkWindows.cmake
CloudStream/CloudStream_QtQuick_Demo/config/: tencent.json
CloudStream/CloudStream_QtQuick_Demo/docs/: QUICKSTART.md  README_TCRSDK.md  desktop_input_protocol.md
CloudStream/CloudStream_QtQuick_Demo/qml/: DesktopWindow.qml  InstanceTokenWindow.qml  MainWindow.qml  StreamingWindow.qml  Theme.qml
CloudStream/CloudStream_QtQuick_Demo/qml/components/: CameraDeviceDialog.qml  ControlButtonArea.qml  Dialogs.qml  MicrophoneDeviceDialog.qml  StatsOverlay.qml  StreamSettingsDialog.qml  VideoRenderArea.qml
CloudStream/CloudStream_QtQuick_Demo/shaders/: d3d11_texture.frag  d3d11_texture.vert  yuv.frag  yuv.vert
CloudStream/CloudStream_QtQuick_Demo/src/: main.cpp
CloudStream/CloudStream_QtQuick_Demo/src/core/: AppConfig.cpp  AppConfig.h  StreamConfig.cpp  StreamConfig.h  TcrInstanceManager.cpp  TcrInstanceManager.h
CloudStream/CloudStream_QtQuick_Demo/src/core/input/: InputCaptureItem.cpp  InputCaptureItem.h
CloudStream/CloudStream_QtQuick_Demo/src/core/video/: D3D11Material.cpp  D3D11Material.h  D3D11Node.cpp  D3D11Node.h  Frame.cpp  Frame.h  VideoRenderItem.cpp  VideoRenderItem.h  VideoRenderPaintedItem.cpp  VideoRenderPaintedItem.h  VideoTransformHelper.cpp  VideoTransformHelper.h  YuvDynamicTexture.cpp  YuvDynamicTexture.h  YuvMaterial.cpp  YuvMaterial.h  YuvNode.cpp  YuvNode.h  YuvTestPattern.cpp  YuvTestPattern.h
CloudStream/CloudStream_QtQuick_Demo/src/services/: ApiService.cpp  ApiService.h  NetworkService.cpp  NetworkService.h
CloudStream/CloudStream_QtQuick_Demo/src/utils/: CrashDumpHandler.cpp  CrashDumpHandler.h  EnvInfoPrinter.h  ImageDownloader.cpp  ImageDownloader.h  ImageProvider.cpp  ImageProvider.h  Logger.cpp  Logger.h  VariantListConverter.cpp  VariantListConverter.h  YuvFrameDumper.cpp  YuvFrameDumper.h
CloudStream/CloudStream_QtQuick_Demo/src/viewmodels/: DesktopViewModel.cpp  DesktopViewModel.h  InstanceTokenViewModel.cpp  InstanceTokenViewModel.h  MultiStreamViewModel.cpp  MultiStreamViewModel.h  StreamingViewModel.cpp  StreamingViewModel.h
(+108 files in other folders)
